# transformer-training

./: README.md  demo.ipynb  main.py  pyproject.toml
data/: text.txt
src/: data.py  evaluation.py  training.py  transformer.py  utils.py
