[project]
name = "transformer-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "jaxtyping>=0.3.9",
    "numpy==1.26.4",
    "torch==2.2.0",
    "transformers>=4.48.0",
    "wandb>=0.26.1",
]
